[package]
name = "i2p_snow"
description = "A pure-rust implementation of the Noise Protocol Framework, with I2P Noise extensions"
homepage = "https://github.com/str4d/snow/tree/i2p-0.4.0"
documentation = "https://snow.rs/doc/i2p_snow"
repository = "https://github.com/str4d/snow/tree/i2p-0.4.0"
version = "0.4.0"
authors = ["Jake McGinty <me@jake.su>", "trevp", "Jack Grigg <str4d@i2pmail.org>"]
license = "Unlicense"
categories = ["cryptography"]
readme = "README.md"
keywords = ["noise", "protocol", "crypto", "i2p"]

[features]
default = ["default-resolver"]
nightly = ["blake2-rfc/simd_opt", "chacha20-poly1305-aead/simd_opt", "x25519-dalek/nightly"]
default-resolver = ["chacha20-poly1305-aead", "blake2-rfc", "rust-crypto", "x25519-dalek", "rand"]
hacl-star-resolver = ["hacl-star"]
hacl-star-accelerated = ["hacl-star-resolver", "default-resolver"]
ring-resolver = ["ring"]
ring-accelerated = ["ring-resolver", "default-resolver"]
vector-tests = []

[[bench]]
name = "benches"
harness = false

[dependencies]
arrayref = "^0.3"
byteorder = "^1.2"
failure = "^0.1"
failure_derive = "^0.1"
smallvec = "^0.6.3"
static_slice = "0.0.3"

chacha20-poly1305-aead = { version = "^0.1", optional = true }
blake2-rfc = { version = "^0.2", optional = true }
rust-crypto = { version = "^0.2", optional = true }
hacl-star = { version = "=0.0.11", optional = true }
rand = { version = "^0.5", optional = true }
ring = { version = "^0.13.0", optional = true }
x25519-dalek = { version = "^0.3", optional = true, default-features = false, features = ["std", "u64_backend"] }

[dev-dependencies]
clap = "^2.0"
criterion = "0.2"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
hex = "^0.3"
lazy_static = "^1.0"

[build-dependencies]
rustc_version = "^0.2"

[package.metadata.docs.rs]
features = [ "ring-resolver", "hacl-star-resolver" ]
all-features = false
no-default-features = false

